	  values. The found fi should always be NULL if there was no fi found.

2011-05-29  Tom Hacohen (TAsn)

	* Font-engine: Conform to the API changes in Harfbuzz 0.6.0

2011-05-29  Raoul Hecky

	* Textblock: Added support for numeric escape codes. e.g "&#x3c;".

2011-05-29  Vincent Torri

	* Fix compilation when --disable-async-preload is passed to configure.

2011-06-01  Cedric Bail

	* Add +evas_object_image_extension_can_load_get and
	evas_object_image_extension_can_load_fast_get that check if a file
	may be opened by Evas_Object_Image.

2011-06-07  Cedric Bail

	* Use Eina_File for JPEG loader.
	* Add evas_object_image_load_orientation_get and evas_object_image_load_orientation_set,
	that tell if we should honor the orientation information when loading image file.

2011-06-17  Carsten Haitzler (The Rasterman)

	* Allow evas table to re-pack the same object without error and just
        update packing parameters
        * Allow to get packing location of table child

2011-06-28  Tom Hacohen (TAsn)

	* Polygon: Implemented "is_inside".

2011-07-05  Hyoyoung Chang

	* Fix bug where event causes event in callback on same object, but
        with same event counter, so also filter out same event types.

2011-07-06  Carsten Haitzler (The Rasterman)

	* Fix bug in grab counting on object hide while events are frozen

2011-07-07  Cedric Bail

	* Fix infite loop when reinserting object during recalc stage.

2011-07-27  Tom Hacohen (TAsn)

	* Textblock: Closing tags formats is now well-defined for complex
	  formats.
	  For example: <font=Sans font_size=23 color=#FFF> should now be
	  closed with </font> (or, like before, with the generic poper).
	* Textblock: Add support for out-of-order tag openers/closers.
	  Markup sequences like <b><i></b></i> are now legal and work as
	  expeceted.

2011-07-28  Tom Hacohen (TAsn)

	* Textblock: Added support for quoting format parameters.
	  Formats like: <font='Sans' color='#FFF'> are now legal.